refactor: replace all Closer.close() calls with try-with-resources or explicit close+log
Closer.close() silently swallows IOExceptions. Replace every call across
115 files with:
- try-with-resources (preferred for stream pairs opened in the same scope)
- explicit null-check + try/catch + Logger.error (for defensive finally blocks
  where streams were already closed on the success path)
- bucket.free() directly (for Bucket resources, which use free() not close())

Also removes all now-unused `import freenet.support.io.Closer` statements and
fixes one dead-code duplication (HTTPRequestImpl had Closer.close(is) twice).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>